Version History
===============

3.0v3
-----
* Made FSD not installable when creating a Plone 4 site (our GS profiles are not
  sufficient for a functional install).
  [cah190 (Craig Haynal)]

3.0b2
-----
* Added a lines field to the facultystaffdirectory_tool that contains the list of
  active states.
  [cah190 (Craig Haynal)]

* Inactive users will now fail to authenticate.
  [cah190 (Craig Haynal)]

* Inactive groups will now appear as empty groups.
  [cah190 (Craig Haynal)]

* Fixed author.cpt to work in Plone 4 by adding missing globals.
  [cah190 (Craig Haynal)]

* Replaced direct page template references to facultystaffdirectory_tool with 
  getToolByName lookups to allow for anonymous viewing of listings.
  [cah190 (Craig Haynal)]

* Added missing icon references to GS type information.
  [cah190 (Craig Haynal)]

* Defined global variables (template_id, normalizeString, member) in skin templates.
  [lvb5153 (Luke Brannon)]

* Removed document_action macros from FSD skin templates.
  [lvb5153 (Luke Brannon)]

* Registered document_actions viewlet to abovecontentbody viewlet manager
  for FSD types (in configure.zcml, since there is no browser package).
  [lvb5153 (Luke Brannon)]

* Replaced object_title global definition with context/Title in FSD
  skin templates.
  [lvb5153 (Luke Brannon)]

3.0b1
-----
* Add Plone 4.0 compatibility.
  [ems174, cah190, cewing, netropic]

2.1.5
-----
* Italian translation merged
  (https://weblion.psu.edu/trac/weblion/ticket/1266).
  [cah190 (Craig Haynal)]

* Updated portal_memberdata image generation based on suggestions
  from michael.lindig and updated tests accordingly
  (https://weblion.psu.edu/trac/weblion/ticket/1204).
  [cah190 (Craig Haynal)]

* Fixed Classification's getPeople to account for effective/
  expired, View permissions
  (https://weblion.psu.edu/trac/weblion/ticket/2036)
  [par117 (Paul Rentschler)]

* Added a termination details field and put it and the effective/